some mobile layout bugs fixed

--- a/genresList.css
+++ b/genresList.css
@@ -158,10 +158,10 @@ footer>img {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     font-family: 'Nunito Sans', sans-serif;
     margin-top: 15px;
     gap: 2vh;
+    height: 85dvh;
 }
 
 .genre {
