--- a/searchResultsStyle.css
+++ b/searchResultsStyle.css
@@ -31,6 +31,7 @@ a {
 html {
     font-size: 100%;
     box-sizing: border-box;
+    overflow: hidden;
 }
 
 body {
