--- a/shared_responsive_style.css
+++ b/shared_responsive_style.css
@@ -372,3 +372,7 @@
     display: flex;
     border-bottom: 1px solid black;
 }
+
+.searchBar {
+    border: none;
+}
